# boss-cli

./: .dockerignore  .env.example  .gitignore  ASTRON_PLUGIN.md  Dockerfile  Dockerfile.chromium  README.md  SKILL.md  chromium-entrypoint.sh  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
boss_cli/: __init__.py  auth.py  browser_login.py  cdp_login.py  cli.py  client.py  config_transfer.py  constants.py  credential_transfer.py  index_cache.py  io_utils.py  job_sources.py  plugin_api.py  public_jobs.py  semantic_cache.py  sqlite_cache.py
boss_cli/commands/: _common.py  auth.py  recruiter.py  social.py
tests/: test_auth.py  test_cdp_login.py  test_cli.py  test_config_transfer.py  test_credential_transfer.py  test_plugin.py  test_semantic_cache.py  test_sqlite_cache.py
